--- a/style.css
+++ b/style.css
@@ -4,74 +4,72 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+
+
+.input-task {
+    outline:none;
+}
+
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
-}
-.aaa img {
-    width: 100%;
-}
-.aaa .more_inf {
     font-family: fantasy, cursive;
+}
+.header img {
+    width: 100%;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
-
 }
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
 
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
-}
-
-.task-row-wrapper {
-    display: flex;
-}
-
-ul {
-    margin:0;
-    padding: 0px;
-}
-li, h3 {
-    list-style:none;
-}
-input,button{
-    outline:none;
-}
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-}
-button:hover {
-    color: #3a3a3a;
-}
-/* Heading */
-h3,
-label[for='new-task'] {
-    color: #333;
+.main__label {
     font-weight: 700;
     font-size: 15px;
     border-bottom: 2px solid #333;
     padding: 30px 0 10px;
-    margin: 0;
     text-transform: uppercase;
+    display: block;
+    margin: 0 0 20px;
 }
-input[type="text"] {
+
+.main__new-task {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1
+}
+.main__task-line-wrapper {
+    display: flex;
+}
+
+.btn {
+    width: 60px;
+    font-size: 15px;
+    color: #888;
+    background: none;
+    border: 0px;
+    cursor: pointer;
+}
+
+
+.btn-edit-task {
+    color: #888;
+    font-family: Lato, sans-serif;
+}
+.btn:hover {
+    color: #3a3a3a;
+}
+/* Heading */
+
+.input-task{
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -83,70 +81,65 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.input-task:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
-    width: 318px;
+
+.list-tasks {
+    margin:0;
+    padding: 0px;
 }
 
 /* Task list */
-li {
+.list-tasks__task {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.list-tasks__task > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-tasks__input-checkbox {
     margin: 0 10px;
 }
-li > label {
+.list-tasks__task > .list-tasks__name-task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
-    width: 226px
-}
-button.delete img {
+
+.btn-delete-task .btn__cross-icon {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn-delete-task .btn__cross-icon:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks .list-tasks__name-task {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list-tasks__task .input-task {
     display:none
 }
 
-ul li.editMode input[type=text] {
+.list-tasks__task.list-tasks__task_edit-mode .input-task {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.list-tasks__task_edit-mode .list-tasks__name-task {
     display:none;
 }
