fix(basic-3.7): added a semicolon after the property

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 
 /* Completed */
 .completed-tasks .list-tasks__name-task {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
